--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
+        <!-- Each tip_entry represents a slide that the user can fling up and down to read tips. -->
     <string-array name="tip_entries">
-        <item>I love how this works, I have no clue what to put there though. Any takers for ideas?</item>
-        <item>This little widget gives you tips on features you might not already know about!</item>
-        <item>Am i typing too much? Maybe, but it feels sooo good.</item>
-        <item>What the hell was I thinking, this text is way too much.</item>
+        <item>Checkout the website! http://www.evervolv.com</item>
+        <item>Want a different lockscreen style? Choose one! Settings > Toolbox > Lockscreen > Lockscreen style</item>
+        <item>Don\'t forget to swipe! Swiping horizontally in the notifications dropdown, slides open a bunch of widgets of all kind!</item>
+        <item>Like customizations? Checkout the toolbox. Settings > Toolbox for all sorts of options!</item>
+        <item>AOSP means open source right? Find Evervolv\'s source on github! https://github.com/Evervolv</item>
+        <item>Widget what? We\'ve added standalone styled widgets for your homescreen check em out. App Drawer > Widgets</item>
+        <item>Follow your devices developer on twitter! Checkout http://www.wiki.evervolv.com and find your developers social habits!</item>
+        <item>Want to contribute to The Evervolv Project? Sign up on gerrit! http://review.evervolv.com</item>
     </string-array>
-
+        <!-- Each tip_entry needs a corresponding icon, if no icon is made, use @drawable/default_icon -->
     <array name="tip_icons" translatable="false">
+        <item>@drawable/evervolv</item>
         <item>@drawable/twitter</item>
         <item>@drawable/widgets</item>
         <item>@drawable/android</item>
+        <item>@drawable/default_icon</item>
         <item>@drawable/evervolv</item>
+        <item>@drawable/default_icon</item>
+        <item>@drawable/default_icon</item>
     </array>
+
+    <string-array name="tip_uri">
+        <item>intent:#Intent;action=android.intent.action.VIEW;scheme="http://www.evervolv.com";end</item>
+        <item>intent:#Intent;action=android.intent.action.MAIN;component=com.evervolv.toolbox/.Settings$LockscreenStyleActivity;end</item>
+        <item>null</item>
+         <item>intent:#Intent;action=android.intent.action.MAIN;component=com.evervolv.toolbox/.Settings;end</item>
+        <item>intent:#Intent;action=android.intent.action.VIEW;scheme="https://github.com/Evervolv";end</item>
+        <item>null</item>
+        <item>intent:#Intent;action=android.intent.action.VIEW;scheme="http://www.wiki.evervolv.com";end</item>
+        <item>intent:#Intent;action=android.intent.action.VIEW;scheme="http://review.evervolv.com";end</item>
+    </string-array>
 </resources>
