EVTips: Remove tip for lockscreen options.
 * Lockscreen options have yet to be implemented.

Change-Id: Ib8b8f8ec4882ef1dea9cb29d855118df01083dc0

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -5,7 +5,7 @@
     <string-array name="tip_entries">
         <item>Press any of these tips to open the link or app associated with them!</item>
         <item>Checkout the website! http://www.evervolv.com</item>
-        <item>Want a different lockscreen style? Choose one! Settings > Toolbox > Lockscreen > Lockscreen style</item>
+        <!-- <item>Want a different lockscreen style? Choose one! Settings > Toolbox > Lockscreen > Lockscreen style</item> -->
         <item>Like customizations? Checkout the toolbox. Settings > Toolbox for all sorts of options!</item>
         <item>AOSP means open source right? Find Evervolv\'s source on github! https://github.com/Evervolv</item>
         <item>Widget what? We\'ve added standalone styled widgets for your homescreen check em out. App Drawer > Widgets</item>
@@ -16,7 +16,7 @@
     <array name="tip_icons" translatable="false">
         <item>@drawable/default_icon</item>
         <item>@drawable/evervolv</item>
-        <item>@drawable/twitter</item>
+        <!-- <item>@drawable/twitter</item> -->
         <item>@drawable/android</item>
         <item>@drawable/default_icon</item>
         <item>@drawable/evervolv</item>
@@ -27,8 +27,8 @@
     <string-array name="tip_uri">
         <item>null</item>
         <item>intent:#Intent;action=android.intent.action.VIEW;scheme="http://www.evervolv.com";end</item>
-        <item>intent:#Intent;action=android.intent.action.MAIN;component=com.evervolv.toolbox/.Settings$LockscreenStyleActivity;end</item>
-         <item>intent:#Intent;action=android.intent.action.MAIN;component=com.evervolv.toolbox/.Settings;end</item>
+        <!-- <item>intent:#Intent;action=android.intent.action.MAIN;component=com.evervolv.toolbox/.Settings$LockscreenStyleActivity;end</item> -->
+        <item>intent:#Intent;action=android.intent.action.MAIN;component=com.evervolv.toolbox/.Settings;end</item>
         <item>intent:#Intent;action=android.intent.action.VIEW;scheme="https://github.com/Evervolv";end</item>
         <item>null</item>
         <item>intent:#Intent;action=android.intent.action.VIEW;scheme="http://wiki.evervolv.com";end</item>
